--- a/index.html
+++ b/index.html
@@ -11,32 +11,14 @@
     <meta name="description" content="Kenzie" />
     <meta name="author" content="Kenzie" />
     <meta name="keywords" content="Kenzie" />
-
+    <link rel="stylesheet" href="css/main.css">
     <!-- Title Page-->
     <title>Kenzie HTML Page</title>
-
-    <style>
-      #text {
-        width: 300px;
-        background-color: grey;
-        height: 200px;
-        overflow: auto;
-      }
-
-      .important {
-        font-weight: bold;
-        text-decoration: underline;
-      }
-
-      .picture {
-        width: 300px;
-        height: 100px;
-      }
-    </style>
   </head>
 
   <body>
-    <h1>Fox</h1>
+    <div class="background">
+      <h1>Fox</h1>
 
     <img
       class="picture"
@@ -65,6 +47,7 @@
         one of only two canine species known to climb trees; the other is the
         raccoon dog.
       </p>
+    </div>
     </div>
   </body>
 </html>
